# krpc-cpp

./: README.md  test.7z
.github/workflows/: cpp-client.yml  manual.yml  protobuf.yml  test-ps.yml  test-run.yml  test.yml
client/: CMakeLists.txt  krpc-cpp.ps1  krpc-demo.ps1  protobuf.ps1
client/src/: main.cpp
